--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     -->
     <string name="hello_world">Hello Square World!</string>
     <string name="jack_reacher">Jack Reacher</string>
+    <string name="ok">Ok</string>
 </resources>
