--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="hello_world">Hello Square World!</string>
     <string name="jack_reacher">Jack Reacher</string>
     <string name="ok">Ok</string>
+    <string name="my_favorite_movies">My Favorite Movies</string>
 </resources>
